<resources>
    <string name="app_name">TurismApp</string>
    <string name="emailText">Email:</string>
    <string name="parolaText">Parola:</string>
    <string name="usernameHint">Introduceti username</string>
    <string name="parolaHint">Introduceti parola</string>
    <string name="pagAtractiiTitlu">Atracții</string>
    <string name="atractiiUnde">Unde?</string>
    <string name="atractiiTip">Ce tip?</string>
    <string name="atractiiCategorie">Categorie:</string>
    <string name="atractiiCauta">Caută</string>
    <string name="cazariCazari">Cazări</string>
    <string name="cazariSorteaza">Sortează după:</string>
    <string name="istoricTitlu">Istoricul municipiului Roman</string>
    <string name="cazariOK">OK</string>
    <string name="istoricPerioada">Perioada:</string>
    <string name="traseuTitlu">Traseu - cele mai importante puncte</string>
    <string name="recenziiTitlu">Recenzii</string>
    <string name="recenzieHint">Adaugă recenzie</string>
    <string name="butonTrimite">Trimite</string>
    <string name="localuriTitlu">Localuri și restaurante</string>
    <string name="localuriAlege">Alege:</string>
    <string name="parcareTitlu">Plată parcare publică</string>
    <string name="parcareNume">Nume:</string>
    <string name="parcareNrTel">Număr telefon:</string>
    <string name="parcareNrInm">Număr înmatriculare:</string>

    <string-array name="tipAtractii">
        <item>Parcuri</item>
        <item>Monumente</item>
        <item>Clădiri</item>
        <item>în restul Județului</item>
    </string-array>
    <string-array name="parcuriArray">
        <item>Zona agrement</item>
        <item>De joacă</item>
        <item>Sportiv</item>
    </string-array>
    <string-array name="monumenteArray">
        <item>Istorice</item>
        <item>Naturale</item>
    </string-array>
    <string-array name="cladiriArray">
        <item>Muzeu</item>
        <item>Bibliotecă</item>
        <item>Complex comercial</item>
        <item>Instituții publice</item>
    </string-array>
    <string-array name="judetArray">
        <item>Obiective istorice</item>
        <item>Atracții naturale</item>
        <item>Distracție și divertisment</item>
    </string-array>
    <string-array name="cazariArray">
        <item>distanță</item>
        <item>preț crescător</item>
        <item>preț descrescător</item>
        <item>număr stele</item>
        <item>reducere</item>
        <item>capacitate</item>
    </string-array>
    <string-array name="istoricArray">
        <item>Alege perioada</item>
        <item>Primele mențiuni</item>
        <item>Perioada comunistă</item>
        <item>Prezent</item>
    </string-array>
    <string-array name="localuriArray">
        <item>Restaurant</item>
        <item>Cafenea</item>
        <item>Bar</item>
        <item>Terasă</item>
    </string-array>
    <string name="title_activity_traseu_google">Map</string>
    <string name="adauga_recenzii">Adaugă recenzii</string>
    <string name="nota2">Nota</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="forget_password">Forget Password</string>
    <string name="login">LogIn</string>
    <string name="need_new_account">Need new Account?</string>
    <string name="email2">Email:</string>
    <string name="password2">Password:</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="cau_i_ceva_anume">Cauți ceva anume?</string>
    <string name="s_ncepem">SĂ ÎNCEPEM!</string>
    <string name="bun_venit_n_municipiul_roman">Bun venit în Municipiul Roman</string>
    <string name="municipiul_roman">Municipiul Roman</string>
    <string name="roman_este_un_municipiu_n_jude_ul_neam_moldova_rom_nia_este_situat_n_partea_central_a_podi_ului_moldovei_n_jude_ul_neam_la_confluen_a_r_urilor_siret_i_moldova">Roman este un municipiu în județul Neamț, Moldova, România. Este situat în partea centrală a podișului Moldovei, în județul Neamț, la confluența râurilor Siret și Moldova.</string>
    <string name="municipiul_roman_are_o_pozi_ie_strategic_n_centrul_regiunii_istorico_geografice_moldova_ntr_o_arie_unde_converg_mai_multe_c_i_de_comunica_ie_de_importan_european_na_ional_i_regional_din_punct_de_vedere_feroviar_f_c_nd_parte_din_magistrala_bucure_ti_dorne_ti_cern_u_i_var_ovia_iar_rutier_afl_ndu_se_pe_axul_expres_de_interes_european_e85_care_leag_polonia_i_ucraina_rusia_i_republica_moldova_prin_rom_nia_de_bulgaria_grecia_turcia_i_orientul_apropiat">Municipiul Roman are o poziție strategică, în centrul regiunii istorico-geografice Moldova, într-o arie unde converg mai multe căi de comunicație de importanță europeană, națională și regională, din punct de vedere feroviar făcând parte din magistrala Bucureşti – Dorneşti – Cernăuţi – Varşovia, iar rutier aflându-se pe axul expres de interes european E85, care leagă Polonia şi Ucraina, Rusia şi Republica Moldova, prin România de Bulgaria, Grecia, Turcia și Orientul Apropiat.</string>
    <string name="istoric_ora">Istoric oraș</string>
    <string name="atrac_ii_turistice">Atracții turistice</string>
    <string name="recenzii_vizitatori">Recenzii vizitatori</string>
    <string name="traseu_puncte_principale">Traseu puncte principale</string>
    <string name="restaurante_i_localuri">Restaurante și localuri</string>
    <string name="caz_ri">Cazări</string>
    <string name="contact_firme_taximetrie">Contact firme taximetrie</string>
    <string name="plata_parcare_public">Plata parcare publică</string>
    <string name="firma">Firma</string>
    <string name="numar_telefon">Numar telefon</string>
    <string name="numar_taxi">Numar taxi</string>

    <string name="lv_nota">%1$s</string>
    <string name="lv_default_value">-</string>
    <string name="add_nota_error_message">Nota invalida</string>
    <string name="atrac_iile_ora_ului_roman">Atracțiile orașului Roman</string>
    <string name="arhiepiscopia_romanului">Arhiepiscopia Romanului</string>
    <string name="muzeul_de_istorie">Muzeul de istorie</string>
    <string name="casa_memorial_calistrat_hoga">Casa memorială Calistrat Hogaș</string>
    <string name="parcul_municipal">Parcul Municipal</string>
    <string name="roman_value_center">Roman Value Center</string>
    <string name="complexul_sportiv_i_de_agrement">Complexul sportiv și de agrement</string>
    <string name="adaug_recenzii">Adaugă recenzii</string>
    <string name="ce_au_spus_al_i_utilizatori">Ce au spus alți utilizatori:</string>
    <string name="recenzie">Recenzie</string>
    <string name="adauga_recenzie">Adauga recenzie</string>
    <string name="nota">Nota</string>
    <string name="istoric1">Primele mențiuni le găsim în Letopisețul Novgorodului, datat în jurul anului 1387 si in cronica lui Nestor. Primul document intern este un hrisov de danie din 30 martie 1392. Se apreciază că numele orașului a fost preluat de la Roman I Mușat, considerat întemeietorul orașului. Romanul a fost de-a lungul istoriei sale unul din cele mai importante centre urbane ale Moldovei, fiind un oraș cosmopolit datoritǎ prezenței mai multor grupuri etnice, cuprinzând, pe langă comunitatea româneasca, comunități importante de armeni, evrei și o importantă comunitate catolică. Roman I i-a eliberat pe evrei de serviciul militar în schimbul unui impozit. Distrus în mare parte în 1467, în timpul campaniei lui Matei Corvin în Moldova, a fost refăcut de Ștefan cel Mare.</string>
    <string name="istoric2">În 1950, Romanul a căpătat statut de oraș regional și a devenit reședință a raionului Roman din regiunea Bacău (între 1952-1956, din Regiunea Iași). Reforma administrativă a lui Nicolae Ceaușescu din 1968 nu a reînființat județul Roman, orașul primind statut de municipiu și trecând la județul Neamț. Până în 1990, cele mai importante întreprinderi din Roman erau Întreprinderea de Țevi Roman (înființată în anul 1957), Întreprinderea Mecanică Roman (fostul arsenal al armatei) și Întreprinderea de Fire și Fibre Poliamidice Roman (înființată în anul 1979, construită pe locul fostului aerodrom Roman).</string>
    <string name="istoric3">Municipiul Roman este, din punct de vedere demografic, al doilea oraş din judeţul Neamț şi între cele mai mari municipii din ţară care nu au funcţia de reşedinţă de judeţ, cu o populaţie stabilă de 50.713 locuitori, conform Recensământului General al Populaţiei din anul 2011, în timp ce Institutul Național de Statistică prin fișa localității pe anul 2012 indică o populație stabilă de 65.205 locuitori, valoare apropiată de datele Direcției Județene de Evidență a Persoanelor Neamț. Din punct de vedere etnic, populația românească reprezintă 88,3%, restul fiind reprezentat de alte etnii: rromi, ruși lipoveni, italieni, greci, armeni, germani, evrei, maghiari, ucraineni.</string>
</resources>