<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:background="#ffff99">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="5dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:textColor="#000066"
            android:textSize="30dp"
            android:hint="@string/firma"
            android:id="@+id/firmaTransport"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:textSize="15dp"
            android:textAlignment="textEnd"
            android:hint="@string/numar_telefon"
            android:id="@+id/nrTelefon"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:textSize="15dp"
            android:hint="@string/numar_taxi"
            android:textAlignment="viewEnd"
            android:id="@+id/tvNrTaxi"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="20px"/>
    </LinearLayout>

</LinearLayout>